Added navigation from HyLogin to HyUserInterface (temporary) so that user stories related to homeless youth profile can be worked on

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".HyUserInterfaceActivity"
+            android:exported="true" />
+        <activity
             android:name=".HyLoginActivity"
             android:exported="true" />
         <activity
