Changed homeless youth ui after login and moved all frontend homelessyouth code into a folder

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".HyUserInterfaceActivity"
+            android:name=".HomelessYouthUiFrontend.HyUserProfileViewActivity"
             android:exported="true" />
         <activity
-            android:name=".HyLoginActivity"
+            android:name=".HomelessYouthUiFrontend.HyUserInterfaceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HomelessYouthUiFrontend.HyLoginActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
