Finish About Us page
About Us page is done, and Donate Us button links to donation page.

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true" >
         <activity
-            android:name=".aboutus"
+            android:name=".Donation"
+            android:exported="true" />
+        <activity
+            android:name=".Aboutus"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
