--- a/BeingSeenApp/app/build.gradle
+++ b/BeingSeenApp/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+//    implementation "com.github.CanHub:Android-Image-Cropper:${version}"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 }
