GMTGAN-7 Add donation status page and remove unused materials
Finalized the frontend pages of About Us. New donation status page appears after donation confirmed. Clicking Back to Home button can go back to homepage.

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true" >
         <activity
+            android:name=".DonationStatus"
+            android:exported="true" />
+        <activity
             android:name=".Donation"
             android:exported="true" />
         <activity
