GMTGAN-81 Add search page
Add a button on homepage to go to search , a search page, and a search result page

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".SearchUI.SearchResult"
+            android:exported="true" />
+        <activity
+            android:name=".SearchUI.SearchPage"
+            android:exported="true" />
+        <activity
             android:name=".HomelessYouthUiFrontend.HySignUpActivity"
             android:exported="true" />
         <activity
