added content page
but havent made buttons for cards

--- a/BeingSeenApp/app/build.gradle
+++ b/BeingSeenApp/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
 //    implementation "com.github.CanHub:Android-Image-Cropper:${version}"
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0-beta01'
+    implementation 'com.google.android.material:material:1.0.0'
 }
