--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".SearchUI.SearchResult"
+            android:exported="true" />
+        <activity
+            android:name=".SearchUI.SearchPage"
+            android:exported="true" />
+        <activity
             android:name=".DonorUiFrontend.DnUserDonoActivity"
             android:exported="true" />
         <activity
