--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".OrganizationUiFrontend.OrgUserProfileViewDonationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".BeingSeenUiFrontend.BsUserProfileViewBalanceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MerchantUiFrontend.MerUserProfileViewBalanceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".OrganizationUiFrontend.OrgUserProfileViewBalanceActivity"
+            android:exported="true" />
+        <activity
             android:name=".DonorUiFrontend.DnContentPageActivity"
             android:exported="true" />
         <activity
