--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.myapplication" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -14,7 +14,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".HomelessYouthUiFrontend.HyMainNavbarActivity"
+            android:exported="true" />
+        <activity
+            android:name=".BeingSeenUiFrontend.BsMainNavbarActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DonorUiFrontend.DnMainNavbarActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MerchantUiFrontend.MerUserProfileViewDonationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".BeingSeenUiFrontend.BsUserProfileViewDonationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".OrganizationUiFrontend.OrgUserProfileViewDonationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".BeingSeenUiFrontend.BsUserProfileViewBalanceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MerchantUiFrontend.MerUserProfileViewBalanceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".OrganizationUiFrontend.OrgUserProfileViewBalanceActivity"
+            android:exported="true" />
         <activity
             android:name=".DonorUiFrontend.DnContentPageActivity"
             android:exported="true" />
@@ -35,9 +62,11 @@
             android:exported="true" />
         <activity
             android:name=".AboutUsFrontend.DonationStatus"
+            android:parentActivityName=".AboutUsFrontend.Donation"
             android:exported="true" />
         <activity
             android:name=".AboutUsFrontend.Donation"
+            android:parentActivityName=".AboutUsFrontend.Aboutus"
             android:exported="true" />
         <activity
             android:name=".AboutUsFrontend.Aboutus"
@@ -69,7 +98,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
