GMTGAN-120 Connect with backend
Add code in frontend calling backend api. Tests needed

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".merchantSearch.MerchantInfoPage"
             android:exported="true" />
         <activity
+            android:name=".merchantSearch.MerchantList"
+            android:exported="true" />
+        <activity
             android:name=".merchantSearch.SearchMerchant"
             android:exported="true" />
         <activity
