--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".DonorUiFrontend.DnDonationGoalActivity"
+            android:exported="true" />
+        <activity
             android:name=".OrganizationUiFrontend.OrgMainNavbarActivity"
             android:exported="true" />
         <activity
