GMTGAN-120 fix displaying bug in DirectTransfer
Instead of reusing xml, copy original code and modify

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".merchantSearch.DirectTransfer"
+            android:exported="true" />
+        <activity
             android:name=".merchantSearch.MerchantInfoPage"
             android:exported="true" />
         <activity
