GMTGAN-136 Add Get API for creating conversion request (#85)

--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <activity
             android:name=".SignUpAndLogin.SignUpActivity"
             android:exported="true"
-            android:label="Being Seen">
+            android:label="Let's Get Started">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
