--- a/springbootmongodb/pom.xml
+++ b/springbootmongodb/pom.xml
@@ -98,6 +98,16 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>3.2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>20.85.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
