--- a/BeingSeenApp/app/build.gradle
+++ b/BeingSeenApp/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.4.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
+
+    def lottieVersion = "4.2.1"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
