--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication" >
+    package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -14,7 +14,10 @@
         android:roundIcon="@mipmap/being_seen_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".LottieAnimations.NotFoundAnimation"
+            android:exported="true" />
         <activity
             android:name=".LottieAnimations.PaymentOkAnimation"
             android:exported="true" />
@@ -65,7 +68,7 @@
         <activity
             android:name=".SignUpAndLogin.SignUpActivity"
             android:exported="true"
-            android:label="Being Seen" >
+            android:label="Being Seen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
