--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".MerchantConversionRequest.MerRequestHistoryFragment"
+            android:exported="true"
+            android:label="Merchant Conversion Request History"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".ConversionRequests.RequestDetails"
             android:exported="true" />
