--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:label="Purchase Credits"
             android:exported="true" />
         <activity
+            android:name=".StripeCurrencyConversion.DnCurrencyConversionActivity"
+            android:label="Purchase Credits"
+            android:exported="true" />
+        <activity
             android:name=".SearchForMerchant.TransferToMerchantActivity"
             android:label="Pay to Merchant"
             android:exported="true" />
