--- a/BeingSeenApp/app/src/main/AndroidManifest.xml
+++ b/BeingSeenApp/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
+            android:name=".CashConversion.CashConversionRequestActivity"
+            android:label="Convert Cash"
+            android:exported="true" />
+        <activity
             android:name=".LottieAnimations.SplashScreenAnimation"
             android:exported="true" >
             <intent-filter>
